--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <input name="input" id="input"></input>
     <div id="display" data-index="0"></div>
     <input id="check"></input>
+    <p>Paste the text you want to practice into the first box, and then begin typing it from memory into the second box. Diacritics will be ignored when checking your answers.</p>
   </body>
 </html>
